<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/gray_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    Security heading -->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!--    First card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pink_card"
        app:cardBackgroundColor="@color/pink_card"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="180dp" />

    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/pink_card"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/sos_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sos_mes"
        app:layout_constraintTop_toBottomOf="@id/text_sos"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintEnd_toStartOf="@id/sos_img"
        android:textColor="@color/white"
        android:layout_margin="16dp"/>

    <!--    SOS image -->

    <ImageView
        android:id="@+id/sos_img"
        android:src="@drawable/ic_sos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card"/>

    <!--Second card -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/green_card"
        app:cardBackgroundColor="@color/green_card"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="180dp"/>

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guard"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintStart_toStartOf="@id/green_card"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/guard_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guard_msg"
        app:layout_constraintTop_toBottomOf="@id/text_guard"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintEnd_toStartOf="@id/guard_img"
        android:textColor="@color/white"
        android:layout_margin="16dp"/>

    <!--    Guard image -->

    <ImageView
        android:id="@+id/guard_img"
        android:src="@drawable/ic_guard"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="@id/green_card"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        android:layout_margin="12dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>